Created presentable resume

--- a/template/FarhanSamirResume.tex
+++ b/template/FarhanSamirResume.tex
@@ -162,13 +162,16 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item
-      \textbf{Languages}
-      \resumeItemListStart
-        \resumeItem{Java}{Used extensively during 16-month internship at Environment Canada}
-        \resumeItem{Python}{Used ubiquitously in undergraduate studies}
-        \resumeItem{C\#}{Used extensively during internship at Princess Margaret Cancer Centre}
-        \resumeItem{C}{Used extensively during course in Advanced Operating Systems}
-      \resumeItemListEnd
+      \textbf{Languages}{: Python, Java, C\#, C, JavaScript } 
+    \item 
+      \textbf{Web Development}{: MEAN stack }
+      \item \textbf{Other}{: Test Automation, Bash Scripting}
+   %   \resumeItemListStart
+       % \resumeItem{Java}{Used extensively during 16-month internship at Environment Canada}
+     %   \resumeItem{Python}{Used ubiquitously in undergraduate studies}
+      %  \resumeItem{C\#}{Used extensively during internship at Princess Margaret Cancer Centre}
+    %    \resumeItem{C}{Used extensively during course in Advanced Operating Systems}
+    %  \resumeItemListEnd
   \resumeSubHeadingListEnd 
   
 
