--- a/template/FarhanSamirResume.tex
+++ b/template/FarhanSamirResume.tex
@@ -60,7 +60,7 @@
 
 \newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=*]}
 \newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
-\newcommand{\resumeItemListStart}{\begin{itemize}[rightmargin=1in]}
+\newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
 %-------------------------------------------
@@ -81,7 +81,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Toronto}{Toronto, Ontario}
-      {Honours Bachelor of Science in Computer Science;  GPA: 3.59}{Sep. 2013 -- Aug. 2018}
+      {Honours Bachelor of Science in Computer Science;  GPA: 3.59}{Sep. 2013 -- Nov. 2018 \textbf{(Expected)}}
+      \resumeItemListStart
+    \item \textbf{Relevant courses}: Operating Systems Design and Implementation, Neural Networks, Machine Learning, Natural Language Processing 
+     \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 
@@ -93,28 +96,28 @@
       {Princess Margaret Cancer Centre}{Toronto, Ontario}
       {Software Developer}{Summer 2017}
       \resumeItemListStart
+        \item Connected .NET project to radiation treatment tracking software to automate updates to patient's
+        treatment plan with a remote procedure call
         \item Developed tool for tracking displacement of regions-of-interest in a patient's body during radiation
         therapy
-        \item Connected .NET project to radiation treatment tracking software to automate updates to patient's
-        treatment plan
         \item Refactored C\# codebase to support dependency injection and subsequently ease the writing of 
         automated tests 
         \item Reduced duration of end-to-end testing by several minutes through a refactoring of old project
         architecture 
-        \item Created front-end component with Angular framework to view tracking results in an elegant format
+        \item Created front-end component with Angular 4.0 framework to view tracking results in an elegant format
       \resumeItemListEnd
 
     \resumeSubheading
       {Environment Canada}{Toronto, Ontario}
       {Student Software Developer}{May 2015 -- Sep. 2016}
       \resumeItemListStart
-        \item Learned architecture of two-decade old codebase and completed 50+ bugfixes
-        \item Discovered and employed GUI testing 
+        \item Learned architecture of two-decade old Java codebase and completed 50+ bugfixes
+        \item Discovered and employed Swing GUI testing 
         library to automate GUI tests 
-        \item Adhered to system architecture standards that
-        were in place when writing new Java classes to ensure maintenance of standards and consistency
         \item Developed novel technique for obtaining
         pinpoint accuracy of a glyph on a map
+        %\item Adhered to system architecture standards that
+        %were in place when writing new Java classes to ensure maintenance of standards and consistency
       \resumeItemListEnd
 
     \resumeSubheading
@@ -159,10 +162,10 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item
-      \textbf{Languages}{: Python, Java, C\#, C, JavaScript } 
+      \textbf{Languages}{: Python (TensorFlow, NumPy), Java (Swing), C\# (.NET Framework), C, JavaScript } 
     \item 
-      \textbf{Web Development}{: MEAN stack }
-      \item \textbf{Other}{: Test Automation, Bash Scripting}
+      \textbf{Web Development}{: MEAN stack, HTML, CSS }
+    \item \textbf{Other}{: Git, Test Automation (Cucumber, Mockito), Bash Scripting}
    %   \resumeItemListStart
        % \resumeItem{Java}{Used extensively during 16-month internship at Environment Canada}
      %   \resumeItem{Python}{Used ubiquitously in undergraduate studies}
@@ -170,8 +173,5 @@
     %    \resumeItem{C}{Used extensively during course in Advanced Operating Systems}
     %  \resumeItemListEnd
   \resumeSubHeadingListEnd 
-  
-
-
 %-------------------------------------------
 \end{document}
